--- a/index.html
+++ b/index.html
@@ -118,30 +118,26 @@ sitemap: true
               </svg>
             </span>
             <span class="round-button__c">
-              <svg width="67" height="61">
-                <use xlink:href="#c"></use>
-              </svg>
+            <svg width="119" height="19">
+              <use xlink:href="#logo"></use>
+            </svg>
             </span>
           </a>
           <div class="tooltip__section">
             <div class="tooltip__marquee __js-marquee">
               <div class="tooltip__list">
-                <a class="tooltip__item animsition-link" href="single-project.html">Kodak</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">Swiss typography</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">Copenhghagen</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">Bottle</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">Exoape</a>
+                <a class="tooltip__item animsition-link" href="single-project.html">Bitcoin Coffee Table Book</a>
+                <a class="tooltip__item animsition-link" href="single-project.html">American Coffee Table Book</a>
+                <a class="tooltip__item animsition-link" href="single-project.html">SUN by D.H. Lawrence</a>
               </div>
             </div>
           </div>
           <div class="tooltip__section">
             <div class="tooltip__marquee __js-marquee--reverse">
               <div class="tooltip__list">
-                <a class="tooltip__item animsition-link" href="single-project.html" data-image="img/picture/common/tooltip/kodak.jpg" data-image2x="img/picture/common/tooltip/kodak@2x.jpg" data-image-w="404" data-image-h="491" data-webp="true">Kodak</a>
-                <a class="tooltip__item animsition-link" href="single-project.html" data-image="img/picture/common/tooltip/swiss-typography.jpg" data-image2x="img/picture/common/tooltip/swiss-typography.jpg" data-image-w="662" data-image-h="510" data-webp="true">Swiss typography</a>
-                <a class="tooltip__item animsition-link" href="single-project.html" data-image="img/picture/common/tooltip/copenhghagen.jpg" data-image2x="img/picture/common/tooltip/copenhghagen.jpg" data-image-w="334" data-image-h="255" data-webp="true">Copenhghagen</a>
-                <a class="tooltip__item animsition-link" href="single-project.html" data-image="img/picture/common/tooltip/bottle.jpg" data-image2x="img/picture/common/tooltip/bottle.jpg" data-image-w="720" data-image-h="548" data-webp="true">Bottle</a>
-                <a class="tooltip__item animsition-link" href="single-project.html" data-image="img/picture/common/tooltip/exoape.jpg" data-image2x="img/picture/common/tooltip/exoape@2x.jpg" data-image-w="719" data-image-h="846" data-webp="true">Exoape</a>
+                <a class="tooltip__item animsition-link" href="single-project.html">SUN by D.H. Lawrence</a>
+                <a class="tooltip__item animsition-link" href="single-project.html">Bitcoin Coffee Table Book</a>
+                <a class="tooltip__item animsition-link" href="single-project.html">American Coffee Table Book</a>
               </div>
             </div>
           </div>
