--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ sitemap: true
           </li>
         </ul>
       </section>
-            <section class="tooltip tooltip--theme-dark">
+            <section class="tooltip tooltip--theme-light">
         <div class="tooltip__container container container--size-large">
           <a class="tooltip__btn round-button" href="#">
             <span class="round-button__circle">
