--- a/index.html
+++ b/index.html
@@ -111,30 +111,21 @@ sitemap: true
       </section>
       <section class="tooltip tooltip--theme-light">
         <div class="tooltip__container container container--size-large">
-          <a class="tooltip__btn round-button" href="#">
-            <span class="round-button__circle">
-            </span>
-            <span class="round-button__c">
-            <svg width="238" height="38">
-              <use xlink:href="#logo"></use>
-            </svg>
-            </span>
-          </a>
           <div class="tooltip__section">
             <div class="tooltip__marquee __js-marquee">
               <div class="tooltip__list">
-                <a class="tooltip__item animsition-link" href="single-project.html">Bitcoin Coffee Table Book</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">American Coffee Table Book</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">SUN by D.H. Lawrence</a>
+                <a class="tooltip__item animsition-link" href="/books/bitcoin/">Bitcoin Coffee Table Book</a>
+                <a class="tooltip__item animsition-link" href="/books/american/">American Coffee Table Book</a>
+                <a class="tooltip__item animsition-link" href="/books/sun/">SUN by D.H. Lawrence</a>
               </div>
             </div>
           </div>
           <div class="tooltip__section">
             <div class="tooltip__marquee __js-marquee--reverse">
               <div class="tooltip__list">
-                <a class="tooltip__item animsition-link" href="single-project.html">SUN by D.H. Lawrence</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">Bitcoin Coffee Table Book</a>
-                <a class="tooltip__item animsition-link" href="single-project.html">American Coffee Table Book</a>
+                <a class="tooltip__item animsition-link" href="/books/sun/">SUN by D.H. Lawrence</a>
+                <a class="tooltip__item animsition-link" href="/books/bitcoin/">Bitcoin Coffee Table Book</a>
+                <a class="tooltip__item animsition-link" href="/books/american/">American Coffee Table Book</a>
               </div>
             </div>
           </div>
