--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@ sitemap: true
           <li class="portfolio-section__item __js_masonry-item">
             <a class="project-preview project-preview--elastic project-preview" href="/books/bitcoin/">
               <span class="project-preview__image">
-                <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" width="531"
-                  height="417" alt="Bitcoin Coffee Table Book">
+                <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" alt="Bitcoin Coffee Table Book">
               </span>
               <span class="project-preview__bottom">
                 <span class="project-preview__title">Bitcoin Coffee Table Book</span>
