--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ sitemap: true
             </a>
           </li>
           <li class="portfolio-section__item __js_masonry-item">
-            <a class="project-preview project-preview--elastic project-preview" href="/books/bitcoin/">
+            <a class="project-preview project-preview--elastic project-preview-vertical" href="/books/bitcoin/">
               <span class="project-preview__image">
                 <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" alt="Bitcoin Coffee Table Book">
               </span>
