--- a/about.html
+++ b/about.html
@@ -4,40 +4,8 @@ title: About
 ---
 
 
-      <section class="modern-hero">
-        <div class="modern-hero__container container container--size-large">
-          <div class="row g-0">
-            <header class="modern-hero__header col-6 col-md-9 order-last align-self-end">
-              <h1 class="modern-hero__title">
-                <span>Books Imbued</span>
-                <span>With Meaning</span>
-              </h1>
-            </header>
-            <div class="modern-hero__content col-6 col-md-3">
-              <!--<a class="modern-hero__btn round-button round-button--mobile-small" href="#">
-                <span class="round-button__circle">
-                  <svg width="251" height="251">
-                    <use xlink:href="#circle-text"></use>
-                  </svg>
-                </span>
-                <span class="round-button__c">
-                  <svg width="67" height="61">
-                    <use xlink:href="#c"></use>
-                  </svg>
-                </span>
-              </a>
-              <a class="modern-hero__more arrow-link" href="about-us.html">
-                <span class="arrow-link__text">About us</span>
-                <span class="arrow-link__icon">
-                  <svg width="75" height="75">
-                    <use xlink:href="#link-arrow"></use>
-                  </svg>
-                </span>
-              </a>-->
-            </div>
-          </div>
-        </div>
-      </section>
+<main>
+  <article class="desktop-padding">
       <section class="about-section">
         <div class="about-section__container container container--size-large">
           <div class="row g-0">
@@ -57,7 +25,7 @@ title: About
             </div>
             <div class="about-section__aside col-md-8">
               <div class="about-section__image" data-aos="fade-up">
-                <img src="img/picture/modern/about.jpg" width="1110" height="727" alt="Team">
+                <img src="img/founder/eric.jpg" alt="Team">
               </div>
             </div>
             <div class="about-section__steps col-12 col-md-8 order-md-last">
@@ -149,3 +117,5 @@ title: About
         </div>
       </section>
     </div>
+  </article>
+</main>
