--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ title: About
         </div>
       </div>
     </section>
-    <section class="portfolio-section container container--size-large portfolio-section--no-padding">
+    <section class="portfolio-section container container--size-large">
       <header class="portfolio-section__header row align-items-end">
         <div class="col-8 col-xl-6 offset-xl-2">
           <h2 class="portfolio-section__title">Our Books</h2>
