--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@ title: About
             <h2 class="about-section__title" data-aos="fade-up">About Us</h2>
             <div class="about-section__wrapper">
               <div class="about-section__text" data-aos="fade-up">{{ site.description }}</div>
-              <a class="about-section__more arrow-link" href="/books/" data-aos="fade-up">
-                <span class="arrow-link__text">See The Books</span>
+              <a class="about-section__more arrow-link" href="/contact/" data-aos="fade-up">
+                <span class="arrow-link__text">CONTACT</span>
                 <span class="arrow-link__icon">
                   <svg width="75" height="75">
                     <use xlink:href="#link-arrow"></use>
@@ -31,10 +31,7 @@ title: About
           <div class="about-section__steps col-12 col-md-8 order-md-last">
             <ul class="about-section__list" data-aos="fade-up">
               <li class="about-section__item">
-                <a href="/books/bitcoin/">BITCOIN COFFEE TABLE BOOK</a>
-              </li>
-              <li class="about-section__item">
-                <a href="/books/american/">AMERICAN COFFEE TABLE BOOK</a>
+                <span>PUBLISHER: ERIC FREEBURG</span>
               </li>
             </ul>
           </div>
@@ -44,17 +41,9 @@ title: About
     <section class="portfolio-section container container--size-large">
       <header class="portfolio-section__header row align-items-end">
         <div class="col-8 col-xl-6 offset-xl-2">
-          <h2 class="portfolio-section__title">Our Books</h2>
+          <h2 class="portfolio-section__title">THE BOOKS</h2>
         </div>
         <div class="col-4 text-right">
-          <a class="portfolio-section__more arrow-link" href="/books/">
-            <span class="arrow-link__text">View All Books</span>
-            <span class="arrow-link__icon">
-              <svg width="75" height="75">
-                <use xlink:href="#link-arrow"></use>
-              </svg>
-            </span>
-          </a>
         </div>
       </header>
       <ul class="portfolio-section__grid __js_portfolio-section-masonry">
