--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ title: About
       <div class="about-section__container container container--size-large">
         <div class="row g-0">
           <div class="about-section__main col-12 col-md-6 order-1">
-            <h2 class="about-section__title" data-aos="fade-up">About Us</h2>
+            <h2 class="about-section__title" data-aos="fade-up">ABOUT</h2>
             <div class="about-section__wrapper">
               <div class="about-section__text" data-aos="fade-up">{{ site.description }}</div>
               <a class="about-section__more arrow-link" href="/contact/" data-aos="fade-up">
