--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ sitemap: true
       <section class="portfolio-section container container--size-large portfolio-section--no-padding">
         <header class="portfolio-section__header row align-items-end">
           <div class="col-8 col-xl-6 offset-xl-2">
-            <h2 class="portfolio-section__title">Our Books</h2>
+            <h2 class="portfolio-section__title">THE BOOKS</h2>
           </div>
           <div class="col-4 text-right">
             <a class="portfolio-section__more arrow-link" href="/books/">
