--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@ sitemap: true
           <div class="contact-section__container container container--size-large">
             <div class="row">
               <div class="contact-section__main col-12 col-md">
-                <h2 class="contact-section__title" data-aos="fade-up">Contact</h2>
+                <h2 class="contact-section__title" data-aos="fade-up">CONTACT</h2>
                 <address class="contact-section__address" data-aos="fade-up">Wilton, Connecticut</address>
-                <div class="contact-section__link" data-aos="fade-up">
+                <div class="contact-section__link style="font-size: .7rem;" data-aos="fade-up">
                   <a href="mailto:tablebookspro@protonmail.com">tablebookspro@protonmail.com</a>
                 </div>
                 <ul class="contact-section__social" data-aos="fade-up">
@@ -30,12 +30,11 @@ sitemap: true
                   <li>
                     <a href="https://tablebookspro.substack.com/">Substack</a>
                   </li>
-                </ul><br><br><br><br><br><br><br><br><br><br>
+                </ul>
               </div>
               <div class="col-12 col-md">
                 <div class="discuss-project discuss-project--no-padding contact-section__aside">
                   <div class="discuss-project__wrapper" data-aos="fade-up">
-                    <div class="discuss-project__title" data-aos="fade-up">Contact</div>
                     <form action="#" method="post">
                       <div class="row justify-content-between gx-0">
                         <div class="discuss-project__field-wrapper col-12 col-md-6" data-aos="fade-up">
