--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@ sitemap: true
             <div class="row">
               <div class="contact-section__main col-12 col-md">
                 <h2 class="contact-section__title" data-aos="fade-up">CONTACT</h2>
-          <div class="footer__title">Follow</div>
-          <ul class="footer__menu-list">
+          <div class="footer__title" style="padding-left: 60px;">Follow</div>
+          <ul class="footer__menu-list" style="padding-left: 60px;">
             {% for social in site.data.social.items %}
             <li class="footer__menu-item">
               <a class="footer__menu-link" href="{{ social.url }}">{{ social.name }}</a>
