--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ title: About
           <div class="about-section__main col-12 col-md-6 order-1">
             <h2 class="about-section__title" data-aos="fade-up">ABOUT</h2>
             <div class="about-section__wrapper">
-              <div class="about-section__text" data-aos="fade-up">{{ site.description }}</div>
+              <div class="about-section__text" data-aos="fade-up">{{ site.about }}</div>
               <a class="about-section__more arrow-link" href="/contact/" data-aos="fade-up">
                 <span class="arrow-link__text">CONTACT</span>
                 <span class="arrow-link__icon">
